# huawei-arena-2023

./: .gitignore  Dockerfile  README.md  defog-sql-coder.ipynb  jupyter.sh  llama-text-sql.ipynb  pyproject.toml  requirements.txt  response_template.csv  testing2.py
RESDSQL/: RESDSQL-inference.ipynb
codes/: codes-inference.ipynb
data/example-data/: example-covid-vaccinations.json  example-covid-vaccinations.sql  example-data.json  example-data.sql  example-simple.json  example-simple.sql  sql-murder-mystery.json  tallest_buildings_global.json  tallest_buildings_global.sql
data/example-data2/: sql-murder-mystery.txt  tallest_buildings_global.sqlite3
data/example2-data/: example-covid-vaccinations.json  example-simple.json  example-simple.sql  example-simple.sqlite3  sql-murder-mystery.json  tallest_buildings_global.json
data/taitanmai/: 100_question_and_queryAnswer.csv  blogDb.db
data/test4242/db/example-data/: example-simple.sqlite3  tallest_buildings_global.sqlite3
data/test4242/db/validation-data/: danger.sqlite3  example-data.sqlite3  tallest_buildings_global.sqlite3
data/test4242/db/validation2-data/: danger.sqlite3  example-data.sqlite3
data/test4242/db/validation3-data/: danger.sqlite3
data/test4242/qq/example-data/: example-covid-vaccinations.json  example-data.json  example-simple.json  sql-murder-mystery.json  tallest_buildings_global.json
data/test4242/qq/example2-data/: example-covid-vaccinations.json  example-simple.json  sql-murder-mystery.json  tallest_buildings_global.json
data/test4242/qq/validation-data/: danger.json  example-data.json  sql-murder-mystery.json  (+1 more)
extras/RESDSQL/: .gitignore
extras/codes/: codes-inference.ipynb
extras/llama2-7b-finetuned/: llama-finetuned.ipynb
flan-t5-finetuning/: flan-t5-tuning.ipynb
infection/: database.py  display.py  prompt.py
infection/databases/: __init__.py  base.py  sql3.py
infection/explainability/: .charts.py.swp  __init__.py  charts.py
infection/modelarts/: __init__.py  download.py
infection/models/: .__init__.py.swp  __init__.py  generation.py  llm.py
infection/postprocess/: __init__.py  sql_format.py
infection/safety/: __init__.py  injections.py
infection/testing/: __init__.py
infection/testing/test4242/: __init__.py
infection/trustworthiness/: __init__.py  charts.py  hallucination.py
notebooks/: defog-sql-coder-cpu.ipynb  defog-sql-coder.ipynb  infection-sql-UI.ipynb  infection-sql-khiem.ipynb  infection-sql.ipynb  llama-text-sql.ipynb  test-filtered-columns-by-similarity.ipynb  test-model-cpu.ipynb
notebooks/experimental/: defog-sql-coder-cpu.ipynb  defog-sql-coder.ipynb  llama-text-sql.ipynb
notebooks/submission/: infection-sql-cpu.ipynb
(+10 files in other folders)
