[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["infection"]

[project]
name = "infection"
version = "1.0"
description = "SQL Assisstant"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
keywords = ["pytorch", "template", "deep learning"]
authors = [
]
maintainers = [
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Deep Learning :: Template",
  "License :: MIT License",
  "Programming Language :: Python :: 3",
]
dependencies = [
    "matplotlib>=3.8.0",
    "sqlglot>=18.6.0",
    "scipy>=1.11.2",
    "optimum==1.13.1",
    "bitsandbytes==0.41.1",
    "sentencepiece==0.1.99",
    "tqdm>=4.64.1",
    "tabulate>=0.8.10",
    "transformers>=4.32.1",
    "tokenizers>=0.13.3",
    "numpy>=1.23.4",
    "pandas>=1.5.1",
    "accelerate>=0.23.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.4"
]

[project.optional-dependencies]
dev=[
    "pytest>=7.2.0",
    "pytest-order>=1.0.1",
    "pre-commit>=2.21.0",
]

[project.urls]  # Optional
"Homepage" = "https://github.com/kaylode/huawei-arena-2023"

[tool.isort]
profile = "black"
